# file-or-pattern

./: Cargo.toml  README.md  package.json
.beads/: issues.jsonl
.config/: nextest.toml
doc/: INITIAL-REVIEW.md  PLAN-prompt-combiner-for-file-or-pattern.md  SUMMARY-prompt-combiner.md
doc/adr/: 001-fsstream-processor.md
doc/plan/: fop-implementation.md  fop-implementation.summary.md  fsstream-review.md  fsstream.md
src/: builder.rs  fop.rs  lib.rs  processor.rs  stamper.rs  stream.rs
src/basic/: exist.rs  fsstream.rs  glob.rs  mod.rs  parser.rs
src/content/: exec.rs  guard.rs  mod.rs  read.rs
src/pipelines/: ereb.rs  mod.rs  simple.rs
