[package]
name = "file-or-pattern"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fop-demo"
path = "bin/fop-demo.rs"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
glob = "0.3"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
itertools = "0.13"
minstant = "0.1"
futures = "0.3"
fsstream = "0.1"
globset = "0.4.18"

[dev-dependencies]
tempfile = "3.14"
tokio = { version = "1.0", features = ["macros"] }
